scenario-4/dump/cluster-2/end-20260528T145147Z/02-istio-config/envoyfilter.istio-system.global-forward-xfcc-15443.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  annotations:
    xcp.tetrate.io/contentHash: 184249e72fe581f03e4d3a09a67192a6
    xcp.tetrate.io/created-by-installer: "true"
  creationTimestamp: "2026-05-27T07:04:50Z"
  generation: 1
  labels:
    install.xcp.tetrate.io/owner-kind: EdgeXcp
    install.xcp.tetrate.io/owner-name: edgexcp
    install.xcp.tetrate.io/owner-version: v1alpha1
    istio.io/rev: stable
  managedFields:
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          f:xcp.tetrate.io/contentHash: {}
          f:xcp.tetrate.io/created-by-installer: {}
        f:labels:
          f:install.xcp.tetrate.io/owner-kind: {}
          f:install.xcp.tetrate.io/owner-name: {}
          f:install.xcp.tetrate.io/owner-version: {}
          f:istio.io/rev: {}
        f:ownerReferences:
          k:{"uid":"bbdc53e2-bd37-4613-8819-dcfb6b0bda3f"}: {}
      f:spec:
        f:configPatches: {}
    manager: xcp-operator-manager
    operation: Apply
    time: "2026-05-27T07:04:50Z"
  - apiVersion: networking.istio.io/v1alpha3
    fieldsType: FieldsV1
    fieldsV1:
      f:status:
        .: {}
        f:observedGeneration: {}
        f:validationMessages: {}
    manager: pilot-discovery
    operation: Update
    subresource: status
    time: "2026-05-27T07:04:53Z"
  name: global-forward-xfcc-15443
  namespace: istio-system
  ownerReferences:
  - apiVersion: install.xcp.tetrate.io/v1alpha1
    blockOwnerDeletion: true
    controller: true
    kind: EdgeXcp
    name: edgexcp
    uid: bbdc53e2-bd37-4613-8819-dcfb6b0bda3f
  resourceVersion: "2133"
  uid: add0f9e1-7521-4364-b5a6-c9871feeaa99
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          forwardClientCertDetails: APPEND_FORWARD
  - applyTo: NETWORK_FILTER
    match:
      context: SIDECAR_OUTBOUND
      listener:
        filterChain:
          filter:
            name: envoy.filters.network.http_connection_manager
        portNumber: 15443
    patch:
      operation: MERGE
      value:
        name: envoy.filters.network.http_connection_manager
        typed_config:
          '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          forwardClientCertDetails: SANITIZE_SET
status:
  observedGeneration: "1"
  validationMessages:
  - documentationUrl: https://istio.io/v1.28/docs/reference/config/analysis/ist0133/
    level: WARNING
    type:
      code: IST0133
